<resources>
    <string name="app_name">BoltDogApp</string>
    <string name="lastname">Nume</string>
    <string name="firstname">Prenume</string>
    <string name="email">Email</string>
    <string name="phonenr">NrTel</string>
    <string name="username">Nume utilizator</string>
    <string name="password">Parola</string>
    <string name="register_button">Creeaza-ti cont</string>
    <string name="login_button">Intra in cont</string>
    <string name="create_an_account">Nu ai cont?</string>
    <string name="selectrole_button">Intra in cont</string>
    <string name="radioGroup" />
    <string name="dogwalker_radioButton">Petsitter</string>
    <string name="dogsowner_radioButton">Posesor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Nume</string>
    <string name="breed">Rasa</string>
    <string name="age">Varsta</string>
    <string name="description">Descriere</string>
    <string name="address">Locatie</string>
    <string name="ownername">Posesor</string>
    <string name="err_empty_nume">Introduceți numele!</string>
    <string name="err_empty_prenume">Introduceți prenumele!</string>
    <string name="err_empty_telefon">Introduceți numarul de telefon!</string>
    <string-array name="breeds_array">
        <item>Bichon</item>
        <item>Ciobanesc</item>
        <item>Chow-chow</item>
        <item>Akita Inu</item>
        <item>Shih Tzu</item>
        <item>Pomeranian</item>
        <item>Dog German</item>
        <item>Amstaff</item>
        <item>Cane Corso</item>
    </string-array>
</resources>