<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".petsitter.DetailAnnouncementActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Home"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_person_24" />

            <ImageView
                android:id="@+id/ivReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_favorite_24" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/image_ann">

            </ImageView>
            <TextView
                android:id="@+id/pet_ownername_ann"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/ownername" />
            <TextView
                android:id="@+id/pet_name_ann"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/pet_breed_ann"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/breed" />

            <TextView
                android:id="@+id/pet_age_ann"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/age">

            </TextView>

            <TextView
                android:id="@+id/pet_description_ann"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:lines="3">

            </TextView>

            <TextView
                android:id="@+id/pet_address_ann"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:lines="3">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_back_ann"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inapoi"
                    android:onClick="backToAnnouncements">

                </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="apply"
                    android:text="Aplica">

                </androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_owner_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profil posesor">

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <!--atasam nav view la care atasam headerul si meniul create-->
    <!--ii pun start ca sa se pozitioneze in stanga de tot-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_petsitter">

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:text="logout"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_logout_24"
                app:drawableTint="@color/black" />
        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>