<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".owner.addAnnouncementActivity"
    tools:openDrawer="start">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Home"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_person_24" />

            <ImageView
                android:id="@+id/ivReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_favorite_24" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pet_camera_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/dog_icon"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_camera"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/button"
                    android:layout_height="wrap_content"
                    android:text="Deschide camera"></androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>

            <EditText
                android:id="@+id/pet_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:hint="@string/name" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alegeti rasa">

                </TextView>
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>


            <EditText
                android:id="@+id/pet_age"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/age">

            </EditText>

            <EditText
                android:id="@+id/pet_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:lines="3">

            </EditText>

            <EditText
                android:id="@+id/pet_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/address">

            </EditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_announce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="Adauga anunt">

            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>


    </RelativeLayout>

    <!--atasam nav view la care atasam headerul si meniul create-->
    <!--ii pun start ca sa se pozitioneze in stanga de tot-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_owner">

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="5dp"
                android:text="logout"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_logout_24"
                app:drawableTint="@color/black" />
        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>